@@ -52,12 +52,15 @@ $extrabuttons['previewselected']=array('name'=>'current',
 if($_SESSION['role']=='admin' and isset($CFG->eportfolio_dataroot) and $CFG->eportfolio_dataroot!=''){
 	$extrabuttons['publishpdf']=array('name'=>'current',
 									  'value'=>'report_reports_publish.php');
-	/*
-	$extrabuttons['email']=array('name'=>'current',
-								 'value'=>'report_reports_email.php');
-	$extrabuttons['message']=array('name'=>'current',
-								 'value'=>'report_reports_message.php');
-	*/
+	if($_SESSION['username']=='administrator'){
+		/*
+		  $extrabuttons['email']=array('name'=>'current',
+		  'value'=>'report_reports_email.php');
+		*/
+
+		$extrabuttons['message']=array('name'=>'current',
+									   'value'=>'report_reports_message.php');
+		}
 	}
 
 two_buttonmenu($extrabuttons,$book);
